--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div id="description4" class="description">
                             <h3 style="display: flex; justify-content: center; align-items: center;">AI ASSISTENTE - Chat Multimodal</h3></br>
                             <h6 style="font-size: 20px;">Aplicativo de Inteligência Artificial Multimodal </h6>
-                            <p><i>Aplicação web desenvolvida para uma empresa de engenharia civil, elétrica e arquitetura.</i></br></br>
+                            <p><i>Aplicação web desenvolvido para meu TCC.</i></br></br>
                                 •	AI Assistente é uma solução personalizada desenvolvida para oferecer interações multimodais com inteligência artificial. A aplicação permite que os usuários se comuniquem por texto, áudio ou imagens, aproveitando uma experiência rica e dinâmica.
 
                                 O sistema é capaz de:
