--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                         </div>
                     </li>
                     <li>
-                        <div class="toggle-item" id="toggleItem5">BDSGE</div>
+                        <div class="toggle-item" id="toggleItem5">SGE</div>
                         <div id="description5" class="description">
                             
                             <h6 style="font-size: 20px;">Sistema de Gestão de Estoques e Vendas </h6>
-                            <p><i>Aplicação web para gestão de estoques e vendas, desenvolvida para pequena empresa, Bia Designer.</i></br></br>
-                                •	O BDSGE é uma aplicação web desenvolvida com Django para gerenciar estoques e vendas de produtos, 
+                            <p><i>Aplicação web para gestão de estoques e vendas, desenvolvida para pequena empresa, de Designer.</i></br></br>
+                                •	O SGE é uma aplicação web desenvolvida com Django para gerenciar estoques e vendas de produtos, 
                                 publicada na AWS. Com funcionalidades como controle de estoque, registro de vendas, e gestão de clientes 
                                 (físicos e jurídicos), o sistema permite também a administração de produtos compostos, ajustando automaticamente
                                  o inventário de seus componentes. Este projeto, além de melhorar minhas habilidades em Python e Django, representa 
