--- a/apresentacao.html
+++ b/apresentacao.html
@@ -39,7 +39,7 @@
             
             </br></br><b><i>Objetivos na Área de Desenvolvimento</i></b></br></br>
             
-            Hoje sou formado em Sistemas de Informação e me]eu objetivo é me tornar um desenvolvedor altamente qualificado, dominando linguagens de programação e 
+            Hoje sou formado em Sistemas de Informação, e meu objetivo é me tornar um desenvolvedor altamente qualificado, dominando linguagens de programação e 
             ferramentas tecnológicas. Quero aplicar meu conhecimento em projetos desafiadores, contribuindo para soluções
              inovadoras. No longo prazo, almejo liderar equipes de desenvolvimento, combinando minhas habilidades técnicas 
              e experiência em liderança para criar ambientes colaborativos e produtivos.
