--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <p><i>Aplicação web de portfólio e cadastro de pessoas, inspirado pela filosofia do Anonymous.</i></br></br>
                                 •	Este projeto representa um marco significativo em minha jornada de desenvolvimento, 
                                 sendo meu primeiro em que utilizei HTML e CSS. Através da aplicação de conceitos fundamentais dessas 
-                                linguagens, consegui criar um ambiente envolvente, demonstrando meu compromisso com o aprendizado contínuo 
+                                linguagens, consegui criar um ambiente envolvente para desktop, demonstrando meu compromisso com o aprendizado contínuo 
                                 e o aprimoramento das minhas habilidades na área de desenvolvimento web. </br><a href="https://danilocorreia1.github.io/anonymous/" style="color: rgb(72, 180, 230);"> Clique Aqui para acessar !</a></p>
                             <img src="assets/images/anonymous.png">
                         </div>
