--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="center">
             
             <div class = "box-left">
-                <img src="assets/images/photo.png" alt="photo">
+                <img src="assets/images/photo.jpeg" alt="photo">
             </div>
             
             <div class="box-center">
